--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,224 @@
-<h1>Main#index</h1>
-<p>Find me in app/views/main/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <title>niconico お昼寝アート</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Costom styles for this template -->
+    <link href="css/myCostomNav.css" rel="stylesheet">
+    <link href="css/jquery.bxslider.css" type="text/css" rel="stylesheet">
+    <!-- CSS Reset -->
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+</head>
+  <body>
+    <!-- Site Name -->
+<!--
+    <div class="sitename">
+      <div class="container">
+        <div class="center-block"><a href="#"><img src="image/Title.jpg" alt="niconico"></a></div>
+      </div>
+    </div> 
+-->
+    <!-- Static navbar -->
+    <!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation">-->
+    <div class="navbar navbar-default">
+      <!--<div class="navbar navbar-fixed-top" role="navigation">-->
+      <div class="container">
+        <div class="sitename">
+          <div class="center-block"><a href="index.html"><img src="image/Title.jpg" alt="niconico"></a></div>
+        </div>
+
+        <!-- navbar header -->
+        <div class="navbar-header">
+ <!-- 
+          <div class="sitename">
+            <div class="center-block"><a href="#"><img src="image/Title.jpg" alt="niconico"></a></div>
+          </div>
+-->
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+        <!-- navbar body -->
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="suhedule.html"><img src="image/Suhedule.jpg" alt="niconico スケジュール"></a></li>
+            <li><a href="event.html"><img src="image/Event.jpg" alt="niconico イベント"></a></li>
+            <li><a href="creater.html"><img src="image/Creater.jpg" alt="niconico 講師情報"></a></li>
+            <li><a href="art.html"><img src="image/Art.jpg" alt="niconico 作品一覧"></a></li>
+            <li><a href="reserve.html"><img src="image/Reserve.jpg" alt="niconico 予約"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Carousel -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:900px; margin:15px auto; display:block; bgcolor=#ffcccc;">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class='img-thumbnail' src="image/photo1.jpg" alt="photo1" style="width:100%;">
+        </div>
+        <div class="item">
+            <img class='img-thumbnail' src="image/photo2.jpg" alt="photo2" style="width:100%;">
+        </div>
+        <div class="item">
+          <img class='img-thumbnail' src="image/photo3.jpg" alt="photo3" style="width:100%;">
+        </div>
+      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <!--mainVisual-->
+<!--
+    <div class="mainVisual_wrapper section">
+      <div class="container">
+        <img src="./img/mainVisual.jpg" alt="" class="img-responsive mainVisual"/>
+      </div>
+    </div>
+-->
+    <!--//mainVisual-->
+ 
+    <!--section-->
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <img src="image/menu.jpg" alt="menu" style="text-aling:center; width:100%; margin:10px 0 20px 0;">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col_box clearfix">
+              <div class="col-xs-6 col-sm-12">
+                <a href="#"><img src="image/test.jpg" alt="撮影会情報" class="img-responsive" style="width:100%; margin:10px auto;"/></a>
+              </div>
+              <div class="col-xs-6 col-sm-12" style="text-align:center;">
+                撮影会情報
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col_box clearfix">
+              <div class="col-xs-6 col-sm-12">
+                <a href="#"><img src="image/test.jpg" alt="講師情報" class="img-responsive" style="width:100%; margin:10px auto;"/></a>
+              </div>
+              <div class="col-xs-6 col-sm-12" style="text-align:center;">
+                講師情報
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col_box clearfix">
+              <div class="col-xs-6 col-sm-12">
+                <a href="#"><img src="image/test.jpg" alt="アート作品" class="img-responsive" style="width:100%; margin:10px auto;"/></a>
+              </div>
+              <div class="col-xs-6 col-sm-12" style="text-align:center;">
+                アート情報
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col_box clearfix">
+              <div class="col-xs-6 col-sm-12">
+                <a href="#"><img src="image/test.jpg" alt="撮影会予約" class="img-responsive" style="width:100%; margin:10px auto;"/></a>
+              </div>
+              <div class="col-xs-6 col-sm-12" style="text-align:center;">
+                撮影会予約
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!--//section-->
+
+
+
+test</br>
+
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+tiest</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+test</br>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
+
