edit views and create add common header.html.erb

--- a/app/views/main/creater.html.erb
+++ b/app/views/main/creater.html.erb
@@ -1,2 +1,1 @@
-<h1>Main#creater</h1>
-<p>Find me in app/views/main/creater.html.erb</p>
+<%= render :partial => "shared/header" , :locals => { title: "test" }  %>
