--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li>
-              <a href="/reserves">
+              <a href="/main/reserves">
                 <%= image_tag("Reserve.jpg", alt: "niconico 予約") %>
               </a>
             </li>
