--- a/app/views/main/art.html.erb
+++ b/app/views/main/art.html.erb
@@ -1,2 +1,1 @@
-<h1>Main#art</h1>
-<p>Find me in app/views/main/art.html.erb</p>
+<%= render :partial => "shared/header" , :locals => { title: "test" }  %>
