--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>niconico お昼寝アート<%= title %></title>
+    <title>niconico お昼寝アート <%= title %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap -->
@@ -51,7 +51,7 @@
               </a>
             </li>
             <li>
-              <a href="/main/create">
+              <a href="/main/creater">
             <%= image_tag("Creater.jpg", alt: "niconico 講師情報") %>
               </a>
             </li>
@@ -70,4 +70,3 @@
         </div>
       </div>
     </div>
-
