--- a/app/views/main/event.html.erb
+++ b/app/views/main/event.html.erb
@@ -1,1 +1,3 @@
-<%= render :partial => "shared/header" , :locals => { title: "test" }  %>
+<%= render :partial => "shared/header" , :locals => { title: @title }  %>
+
+<%= render :partial => "shared/footer"  %>
