--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,89 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <title>niconico お昼寝アート</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Costom styles for this template -->
-    <link href="css/myCostomNav.css" rel="stylesheet">
-    <link href="css/jquery.bxslider.css" type="text/css" rel="stylesheet">
-    <!-- CSS Reset -->
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-</head>
-  <body>
-    <!-- Site Name -->
-<!--
-    <div class="sitename">
-      <div class="container">
-        <div class="center-block"><a href="#"><img src="image/Title.jpg" alt="niconico"></a></div>
-      </div>
-    </div> 
--->
-    <!-- Static navbar -->
-    <!-- <div class="navbar navbar-default navbar-fixed-top" role="navigation">-->
-    <div class="navbar navbar-default">
-      <!--<div class="navbar navbar-fixed-top" role="navigation">-->
-      <div class="container">
-        <div class="sitename">
-          <div class="center-block">
-            <a href="/">
-              <%= image_tag("Title.jpg", alt: "niconico") %>
-            </a>
-          </div>
-        </div>
-
-        <!-- navbar header -->
-        <div class="navbar-header">
- <!-- 
-          <div class="sitename">
-            <div class="center-block"><a href="#"><img src="image/Title.jpg" alt="niconico"></a></div>
-          </div>
--->
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-
-        <!-- navbar body -->
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="/main/schedule">
-                <%= image_tag("Schedule.jpg", alt: "niconico スケジュール") %>
-              </a>
-            </li>
-            <li>
-              <a href="/main/event">
-                <%= image_tag("Event.jpg", alt: "niconico イベント") %>
-              </a>
-            </li>
-            <li>
-              <a href="/main/creater">
-                <%= image_tag("Creater.jpg", alt: "niconico 講師情報") %>
-              </a>
-            </li>
-            <li>
-              <a href="/main/art">
-                <%= image_tag("Art.jpg", alt: "niconico 作品一覧") %>
-              </a>
-            </li>
-            <li>
-              <a href="/main/reserves">
-                <%= image_tag("Reserve.jpg", alt: "niconico 予約") %>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
+<%= render :partial => "shared/header" , :locals => { title: @title }  %>
     <!-- Carousel -->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:900px; margin:15px auto; display:block; bgcolor=#ffcccc;">
       <!-- Indicators -->
@@ -198,8 +113,4 @@ test</br>
 test</br>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
-
+<%= render :partial => "shared/footer"  %>
