add art samples.

--- a/app/views/main/art.html.erb
+++ b/app/views/main/art.html.erb
@@ -1,3 +1,29 @@
 <%= render :partial => "shared/header" , :locals => { title: @title }  %>
 
+<h1>Sample</h1>
+<span>
+  <%= image_tag("sample1.jpg") %>
+</span>
+
+<h1>Sample</h1>
+<span>
+  <%= image_tag("sample2.jpg") %>
+</span>
+
+<h1>Sample</h1>
+<span>
+  <%= image_tag("sample3.jpg") %>
+</span>
+
+<h1>Sample</h1>
+<span>
+  <%= image_tag("sample4.jpg") %>
+</span>
+
+<h1>Sample</h1>
+<span>
+  <%= image_tag("sample5.jpg") %>
+</span>
+
+
 <%= render :partial => "shared/footer"  %>
