--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,14 @@
 <div class="navbar navbar-default">
-  <div class="container">
+  <div class="container-fluid text-center">
 
     <!-- navbar Title -->
-    <div class="sitename">
-      <div class="center-block">
-        <%= link_to image_tag("Title.jpg", alt: "niconico"), root_path %>
-      </div>
+    <div class="logo">
+      <%= link_to image_tag("Title.jpg", alt: "niconico"), root_path %>
     </div>
 
     <!-- navbar header -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nabvar-collapse">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu">
         <span class ="sr-only">Toggle navigation</span>
         <span class ="icon-bar"></span>
         <span class ="icon-bar"></span>
@@ -19,7 +17,7 @@
     </div>
 
     <!-- navbar body -->
-    <div class="navbar-collapse collapse">
+    <div class="navbar-collapse collapse" id="navMenu">
       <ul class="nav navbar-nav">
         <li>
           <%= link_to image_tag("Schedule.jpg", alt: "niconico スケジュール"), schedule_path %>
