chase for db_migration

--- a/app/views/main/reserve.html.erb
+++ b/app/views/main/reserve.html.erb
@@ -102,10 +102,10 @@
           </div>
           <div class="col-md-3 col-xs-6">
             <div class="radio">
-              <label><%= f.radio_button :reserve_period, 0 %>午前</label>
+              <label><%= f.radio_button :reserve_period_id, 0 %>午前</label>
             </div>
             <div class="radio">
-              <label><%= f.radio_button :reserve_period, 1 %>午後</label>
+              <label><%= f.radio_button :reserve_period_id, 1 %>午後</label>
             </div>
           </div>
         </div>
@@ -117,10 +117,10 @@
           </div>
           <div class="col-md-3 col-xs-6">
             <div class="radio">
-              <label><%= f.radio_button :beginner, 0 %>はい</label>
+              <label><%= f.radio_button :beginner_flg, 0 %>はい</label>
             </div>
             <div class="radio">
-              <label><%= f.radio_button :beginner, 1 %>いいえ</label>
+              <label><%= f.radio_button :beginner_flg, 1 %>いいえ</label>
             </div>
           </div>
         </div>
